sửa lôĩ ci , refactor lại mấy file quá lơns